# sentiment_analyse

./: main.py  pyproject.toml
app/: app.py  dependencies.py
app/routers/: config.py  host.py  report.py  research.py
app/routers/rest/: config.py  host.py  report.py  research.py
app/routers/sse/: research_progress.py
app/schemas/: config_schema.py  host_schema.py  report_schema.py  research_schema.py
app/services/: host_service.py  research_service.py
app/services/host/: discuss_buffer.py  host_service.py
app/services/lifecycle/: lifecycle_service.py
app/services/realtime/: __init__.py  broadcaster_service.py
app/services/report/: input_loader.py  report_service.py  task_store.py
app/services/research/: research_service.py
app/services/system/: config_service.py
data/report/: report_智能舆情分析报告_20260714_224732.html  report_智能舆情分析报告_20260714_224732.md
data/report/host/: Host_高考_20260714_224518.md
engines/common/: llm_client.py  progress.py
engines/contracts/: config.py  dimensions.py  roles.py
engines/host_agent/: graph.py  judge.py  listener.py  mappers.py  nodes.py  pair_store.py  prompts.py  schemas.py  state.py  text.py
engines/insight_agent/: agent.py  context.py  evidence_processor.py  graph.py  prompts.py  schemas.py  state.py
engines/media_agent/: agent.py  context.py  evidence_processor.py  graph.py  prompts.py  schemas.py  state.py
engines/orchestration/: research.py
engines/report_engine/: engine.py  prompts.py  renderer.py
front/: index.html  package-lock.json  package.json
front/src/: App.vue  main.js
test/: pub_sub.py  test_v2_model.py
(+88 files in other folders)
