[project]
name = "sentiment-platform"
version = "1.0.0"
description = "尚舆分析平台 — 多专家圆桌讨论的 AI 深度舆情研究平台"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.121.1",
    "uvicorn>=0.37.0",
    # Config & logging
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "loguru>=0.7.2",
    # LLM / AI Agent
    "openai>=1.109.1",
    "langgraph>=1.0.4",
    # Database (舆情库只读访问)
    "sqlalchemy>=2.0.43",
    "aiomysql>=0.3.2",
    "pymysql>=1.1.2",
    # Search & network
    "tavily-python>=0.7.24",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    # Markdown rendering (report engine)
    "mistune>=3.1",
    "cryptography>=48.0.1",
    "langchain-openai>=1.3.0",
    "langchain>=1.3.9",
    "sse-starlette>=3.4.4",
    "jieba>=0.42.1",
    "pymilvus[model]>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

ml = [
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "FlagEmbedding>=1.3.5",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true  # 明确指定，否则普通包不要来这里找

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }



[tool.hatch.build.targets.wheel]
packages = ["app", "engines"]
